# codex-agent-governance

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  install.py  pyproject.toml  setup.py
.codex/: config.toml
.codex/agents/: code_locator.toml  cross_module_architect.toml  default.toml  explorer.toml  release_operator.toml  semantic_reviewer.toml  systems_safety.toml  worker.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: openai.yaml
benchmarks/: observations.json
docs/assets/: .gitkeep
references/: governance.json  roles.json  runtime-profiles.json
scripts/: agent_system.py  install.py  managed_lock.py  render_charts.py
src/codex_agent_governance/: __init__.py  cli.py
tests/: test_governance.py  test_v02_runtime.py
tests/fixtures/v0.2.0/: release.json
tests/fixtures/v0.2.0/agents/: cross_module_architect.toml  explorer.toml
tests/fixtures/v0.2.1/: release.json
tests/fixtures/v0.2.1/agents/: explorer.toml  worker.toml
