[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-agent-governance"
version = "0.2.3"
description = "Experimental native eight-role delegation system for Codex"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"

[project.scripts]
codex-agent-governance = "codex_agent_governance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
